# fontplayer

./: .gitignore  ALL_FIXES_SUMMARY.md  AXIS_NAME_FEATURE.md  COLOR_FONT_BUGFIX.md  COLOR_FONT_FINAL_SOLUTION.md  COLOR_FONT_IMPLEMENTATION.md  CRITICAL_BUG_FIX.md  CRITICAL_FIX_COMBINATIONS.md  CURRENT_STATUS_AND_NEXT_STEPS.md  DEPLOYMENT_GUIDE.md  FINAL_TEST_CHECKLIST.md  FONT_VALIDATOR_TROUBLESHOOTING.md  FUNCTION_NAMING_PROGRESS.md  GLYF_SERIALIZATION_IMPLEMENTATION.md  IMPLEMENTATION_CHECKLIST.md  IMPORT_REFACTOR_SUMMARY.md  INSTANCE_NAME_IMPLEMENTATION.md  INTERSECTING_CONTOURS_EXPLAINED.md  License  MAXP_TABLE_FIX.md  OVERLAP_FIX_SUMMARY.md  POSTSCRIPT_NAME_AUTO_GENERATION.md  PS_FONT_NOT_FOUND_DEBUG.md  QUICK_TEST_GUIDE.md  README.md  README_VARIABLE_FONT.md  SFNT_CRITICAL_FIXES.md  SFNT_VERSION_FIX.md  SKELETON_BIND_README.md  STACK_OVERFLOW_FIX.md  UNDO_REDO_OPTIMIZATION_PLAN.md  UPDATE_BONE_MATRICES_SUMMARY.md  VARIABLE_FONT_BUG_FIX.md  VARIABLE_FONT_CFF_PROBLEM.md  VARIABLE_FONT_COMPLETE.md  VARIABLE_FONT_FINAL_SOLUTION.md  VARIABLE_FONT_INSTANCES.md  VARIABLE_FONT_NAMING.md  VERIFY_VARIABLE_FONT.md  WASM_OVERLAP_REMOVAL.md  (+8 more)
crates/font-overlap-remover/: Cargo.toml
crates/font-overlap-remover/src/: lib.rs
public/: overlap_wasm_bg.wasm  test-overlap-fix.html
scripts/: add_skeletonToBones_functions.js  build-wasm.js  fix_basic_stroke_function_names.js  fix_bone_types.js  fix_skeletonToBones_function_names.js  fix_strokeFnMap.js  generate_stroke_templates.js  test-overlap-fix.js  test-wasm.js  test_skeletonToBones.js  update_strokeFnMap.js
src/: App.vue  (+1 more)
(+503 files in other folders)
